--- a/Audit_ODM.html
+++ b/Audit_ODM.html
@@ -14,7 +14,7 @@
     <header class="headerWrap">
 		<h2 class="lenovoTitle">wistron_ZS</h2>
 		<a href="javascript:void(0)" data-rel="back" class="jqm-navmenu-link ui-btn-left headico myico-arrowL"></a>
-		<a href="Audit_Search.html" data-transition="slide" class="jqm-search-link ui-btn-right myico-search"></a>
+		<a href="Audit_Search.html" data-transition="none" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
     
@@ -36,23 +36,23 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="index.html" data-transition="slide" class="navList nav01">
+		    <a href="index.html" data-transition="none" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB_Odm.html" data-transition="none" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
-		    <a href="Audit.html" data-transition="slide" class="navList nav03 cur">
+		    <a href="Audit.html" data-transition="none" class="navList nav03 cur">
 		        <i class="myico-nav03"></i>
 		        <p>AUDIT</p>
 		    </a>
-		    <a href="FAI.html" data-transition="slide" class="navList nav04">
+		    <a href="FAI.html" data-transition="none" class="navList nav04">
 		        <i class="myico-nav04"></i>
 		        <p>FAI</p>
 		    </a>
-		    <a href="EC.html" data-transition="slide" class="navList nav05">
+		    <a href="EC.html" data-transition="none" class="navList nav05">
 		        <i class="myico-nav05"></i>
 		        <p>EC</p>
 		    </a>
