--- a/FAI_SearchResult-1.html
+++ b/FAI_SearchResult-1.html
@@ -39,7 +39,7 @@
 <div data-role="page" data-quicklinks="true" class="bg_org js-chart chart_fai_odm"   data-page-name="fai_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI Search Result</h2>
-		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="FAI.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
