--- a/FPY_OOB.html
+++ b/FPY_OOB.html
@@ -32,11 +32,11 @@
     
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_blue2 index-page fpy_ood_odm" data-page-name="fpy_ood_odm">
+<div data-role="page" data-quicklinks="true" class="bg_blue2 index-page" data-page-name="fpy_oob">
     <header class="headerWrap">
-        <h2 class="lenovoTitle chartsTab"><span class="chartsTab_l cur">RAMP UP</span><span class="chartsTab_r">MP</span></h2>
-        <a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-        <a href="FPY_Search.html" data-transition="slide" class="jqm-search-link ui-btn-right myico-search"></a>
+        <h2 class="lenovoTitle fpyoob chartsTab"><span class="chartsTab_l cur">RAMP UP</span><span class="chartsTab_r">MP</span></h2>
+        <a href="User_Center.html" data-transition="none" class="jqm-navmenu-link ui-btn-left myico-user"></a>
+        <a href="FPY_Search.html" data-transition="none" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
     <!-- /header -->
     <div role="main" class="ui-content">
@@ -142,23 +142,23 @@
     <!-- footer -->
     <div data-role="footer" class="footerWrap">
         <div class="navWrap">
-            <a href="index.html" data-transition="slide" class="navList nav01">
+            <a href="index.html" data-transition="none" class="navList nav01">
                 <i class="myico-nav01"></i>
                 <p>Q-STOP</p>
             </a>
-            <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02 cur">
+            <a href="FPY_OOB.html" data-transition="none" class="navList nav02 cur">
                 <i class="myico-nav02"></i>
                 <p>FPY/OOB</p>
             </a>
-            <a href="Audit.html" data-transition="slide" class="navList nav03">
+            <a href="Audit.html" data-transition="none" class="navList nav03">
                 <i class="myico-nav03"></i>
                 <p>AUDIT</p>
             </a>
-            <a href="FAI_Odm.html" data-transition="slide" class="navList nav04">
+            <a href="FAI_Odm.html" data-transition="none" class="navList nav04">
                 <i class="myico-nav04"></i>
                 <p>FAI</p>
             </a>
-            <a href="EC.html" data-transition="slide" class="navList nav05">
+            <a href="EC.html" data-transition="none" class="navList nav05">
                 <i class="myico-nav05"></i>
                 <p>EC</p>
             </a>
