--- a/FPY_OOBSearchResult-3.html
+++ b/FPY_OOBSearchResult-3.html
@@ -28,7 +28,7 @@
 <div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 js-chart chart_fpy_oob_s3" data-page-name="fpy_oob_s3">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FPY/OOB Search Result</h2>
-		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="FPY_OOB.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
 	<div role="main" class="ui-content noFooter">
