--- a/FPY_Search.html
+++ b/FPY_Search.html
@@ -28,16 +28,16 @@
 <div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 index-page">
 	<header class="headerWrap">
 		<h2 class="lenovoTitle">Search</h2>
-		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="FPY_OOB.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->		
 	<div role="main" class="ui-content noFooter">
 	    <div class="searchTabTag">
-	        <a href="Qstop_Search.html" data-transition="slide" class="tabTag">Q-Stop <i class="tag_down_ico"></i></a>
-	        <a href="FPY_Search.html" data-transition="slide" class="tabTag cur">FPY/OOB <i class="tag_down_ico"></i></a>
-	        <a href="Audit_Search.html" data-transition="slide" class="tabTag">Audit <i class="tag_down_ico"></i></a>
-	        <a href="FAI_Search.html" data-transition="slide" class="tabTag">FAI <i class="tag_down_ico"></i></a>
-	        <a href="EC_Search.html" data-transition="slide" class="tabTag">EC <i class="tag_down_ico"></i></a>
+	        <a href="Qstop_Search.html" data-transition="none" class="tabTag">Q-Stop <i class="tag_down_ico"></i></a>
+	        <a href="FPY_Search.html" data-transition="none" class="tabTag cur">FPY/OOB <i class="tag_down_ico"></i></a>
+	        <a href="Audit_Search.html" data-transition="none" class="tabTag">Audit <i class="tag_down_ico"></i></a>
+	        <a href="FAI_Search.html" data-transition="none" class="tabTag">FAI <i class="tag_down_ico"></i></a>
+	        <a href="EC_Search.html" data-transition="none" class="tabTag">EC <i class="tag_down_ico"></i></a>
 	    </div>
 	    <div class="searchTabCon">
 	        <div class="timeWrap">
@@ -228,7 +228,7 @@
 	        </div>
 	    </div>
 	    <div class="seachBtnWrap">
-	        <a href="FPY_OOBSearchResult-1.html" data-transition="slide" class="form_btn form_btn_blue">Search</a>
+	        <a href="FPY_OOBSearchResult-1.html" data-transition="none" class="form_btn form_btn_blue">Search</a>
 	    </div>
 	</div>
 
