--- a/Qstop_SearchResult.html
+++ b/Qstop_SearchResult.html
@@ -28,7 +28,7 @@
 <div data-role="page" data-quicklinks="true" class="bg_blue js-chart chart_qstop_result" data-page-name="qstop_result">
      <header class="headerWrap">
 		<h2 class="lenovoTitle">Q-Stop Search Result</h2>
-		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="Qstop_Odm.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
