--- a/User_Information.html
+++ b/User_Information.html
@@ -36,7 +36,7 @@
         <div class="PcenterMain">
 			<div class="userinfo_1">				
 				<div class="photoWarp">
-					<span class="userBg01"><span class="userBg02"><span class="userBg03"><i class="myico-user userIcon"></i><img src="../images/temp/20141015001445616.jpg" alt="" /></span></span></span>
+					<span class="userBg01"><span class="userBg02"><span class="userBg03"><i class="myico-user userIcon"></i><img src="images/temp/20141015001445616.jpg" alt="" /></span></span></span>
 				</div>
 				<dl class="infoList">
 					<dt class="infoTit">Chinese name</dt>
