--- a/Audit.html
+++ b/Audit.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_purple01 aduit-chart" data-page-name="aduit">
+<div data-role="page" data-quicklinks="true" class="bg_purple01 aduit-chart" data-page-name="audit_home">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">AUDIT</h2>
-		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-		<a href="Audit_Search.html" data-transition="slide" class="jqm-search-link ui-btn-right myico-search"></a>
+		<a href="User_Center.html" data-transition="none" class="jqm-navmenu-link ui-btn-left myico-user"></a>
+		<a href="Audit_Search.html" data-transition="none" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
     
@@ -23,7 +23,7 @@
            <div class="eb_audit_inner">
 <!--
                <div class="eb_audit_items blue_0">
-                   <a href="Audit_ODM.html" data-transition="slide">
+                   <a href="Audit_ODM.html" data-transition="none">
                        <div class="vam clearfix">
                            <div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_1.png);"></div>
                            <div class="eai_score">99</div>
@@ -33,10 +33,10 @@
                     </a>
                 </div>
                 <div class="eb_audit_items blue_1">
-                    <a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_1.png);"></div>		<div class="eai_score">95</div>		<div class="eai_comname">wistron_ZS</div>		<div class="eai_state up"></div>	</div>	</a></div>
-                <div class="eb_audit_items yellow_0"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_2.png);"></div>		<div class="eai_score">94</div>		<div class="eai_comname">Compal</div>		<div class="eai_state down"></div>	</div>	</a></div>
-                <div class="eb_audit_items yellow_1"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_3.png);"></div>		<div class="eai_score">85</div>		<div class="eai_comname">Quanta</div>		<div class="eai_state"></div>	</div>	</a></div>
-                <div class="eb_audit_items yellow_2"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_4.png);"></div>		<div class="eai_score">90</div>		<div class="eai_comname">Bitand</div>		<div class="eai_state up"></div>	</div>	</a></div><div class="eb_audit_items red_0"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_5.png);"></div>		<div class="eai_score">50</div>		<div class="eai_comname">LCFC</div>		<div class="eai_state down"></div>	</div>	</a></div>
+                    <a href="Audit_ODM.html" data-transition="none">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_1.png);"></div>		<div class="eai_score">95</div>		<div class="eai_comname">wistron_ZS</div>		<div class="eai_state up"></div>	</div>	</a></div>
+                <div class="eb_audit_items yellow_0"><a href="Audit_ODM.html" data-transition="none">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_2.png);"></div>		<div class="eai_score">94</div>		<div class="eai_comname">Compal</div>		<div class="eai_state down"></div>	</div>	</a></div>
+                <div class="eb_audit_items yellow_1"><a href="Audit_ODM.html" data-transition="none">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_3.png);"></div>		<div class="eai_score">85</div>		<div class="eai_comname">Quanta</div>		<div class="eai_state"></div>	</div>	</a></div>
+                <div class="eb_audit_items yellow_2"><a href="Audit_ODM.html" data-transition="none">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_4.png);"></div>		<div class="eai_score">90</div>		<div class="eai_comname">Bitand</div>		<div class="eai_state up"></div>	</div>	</a></div><div class="eb_audit_items red_0"><a href="Audit_ODM.html" data-transition="none">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_5.png);"></div>		<div class="eai_score">50</div>		<div class="eai_comname">LCFC</div>		<div class="eai_state down"></div>	</div>	</a></div>
 -->
                 </div>
        </div>
@@ -45,23 +45,23 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="index.html" data-transition="slide" class="navList nav01">
+		    <a href="index.html" data-transition="none" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB.html" data-transition="none" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
-		    <a href="Audit.html" data-transition="slide" class="navList nav03 cur">
+		    <a href="Audit.html" data-transition="none" class="navList nav03 cur">
 		        <i class="myico-nav03"></i>
 		        <p>AUDIT</p>
 		    </a>
-		    <a href="FAI.html" data-transition="slide" class="navList nav04">
+		    <a href="FAI.html" data-transition="none" class="navList nav04">
 		        <i class="myico-nav04"></i>
 		        <p>FAI</p>
 		    </a>
-		    <a href="EC.html" data-transition="slide" class="navList nav05">
+		    <a href="EC.html" data-transition="none" class="navList nav05">
 		        <i class="myico-nav05"></i>
 		        <p>EC</p>
 		    </a>
