--- a/Audit_SearchResult.html
+++ b/Audit_SearchResult.html
@@ -39,7 +39,7 @@
 <div data-role="page" data-quicklinks="true" class="bg_purple01 audit_search_chart" data-page-name="audit_search">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">Audit Search Result</h2>
-		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="Audit.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
