--- a/Qstop_Odm.html
+++ b/Qstop_Odm.html
@@ -27,13 +27,13 @@
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_blue js-chart">
     <header class="headerWrap">
-		<h2 class="lenovoTitle">
+		<h2 class="lenovoTitle selectTitle">
         	<select class="form_select form_txt_style" id="" name="">
                 <option selected="" value="--Please Select--">--Please Select--</option>
                 <option value="ShangHai">OVER ALL</option>
             </select></h2>
-		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-		<a href="Qstop_Search.html" data-transition="slide" class="jqm-search-link ui-btn-right myico-search"></a>
+		<a href="User_Center.html" data-transition="none" class="jqm-navmenu-link ui-btn-left myico-user"></a>
+		<a href="Qstop_Search.html" data-transition="none" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
     <div role="main" class="ui-content">
@@ -144,23 +144,23 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="index.html" data-transition="slide" class="navList nav01 cur">
+		    <a href="index.html" data-transition="none" class="navList nav01 cur">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB_Odm.html" data-transition="none" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
-		    <a href="Audit.html" data-transition="slide" class="navList nav03">
+		    <a href="Audit.html" data-transition="none" class="navList nav03">
 		        <i class="myico-nav03"></i>
 		        <p>AUDIT</p>
 		    </a>
-		    <a href="FAI.html" data-transition="slide" class="navList nav04">
+		    <a href="FAI.html" data-transition="none" class="navList nav04">
 		        <i class="myico-nav04"></i>
 		        <p>FAI</p>
 		    </a>
-		    <a href="EC.html" data-transition="slide" class="navList nav05">
+		    <a href="EC.html" data-transition="none" class="navList nav05">
 		        <i class="myico-nav05"></i>
 		        <p>EC</p>
 		    </a>
