--- a/Qstop_Search.html
+++ b/Qstop_Search.html
@@ -28,16 +28,16 @@
 <div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue index-page">
 	<header class="headerWrap">
 		<h2 class="lenovoTitle">Search</h2>
-		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="Qstop_Odm.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->		
 	<div role="main" class="ui-content noFooter">
 	    <div class="searchTabTag">
-	        <a href="Qstop_Search.html" data-transition="slide" class="tabTag cur">Q-Stop <i class="tag_down_ico"></i></a>
-	        <a href="FPY_Search.html" data-transition="slide" class="tabTag">FPY/OOB <i class="tag_down_ico"></i></a>
-	        <a href="Audit_Search.html" data-transition="slide" class="tabTag">Audit <i class="tag_down_ico"></i></a>
-	        <a href="FAI_Search.html" data-transition="slide" class="tabTag">FAI <i class="tag_down_ico"></i></a>
-	        <a href="EC_Search.html" data-transition="slide" class="tabTag">EC <i class="tag_down_ico"></i></a>
+	        <a href="Qstop_Search.html" data-transition="none" class="tabTag cur">Q-Stop <i class="tag_down_ico"></i></a>
+	        <a href="FPY_Search.html" data-transition="none" class="tabTag">FPY/OOB <i class="tag_down_ico"></i></a>
+	        <a href="Audit_Search.html" data-transition="none" class="tabTag">Audit <i class="tag_down_ico"></i></a>
+	        <a href="FAI_Search.html" data-transition="none" class="tabTag">FAI <i class="tag_down_ico"></i></a>
+	        <a href="EC_Search.html" data-transition="none" class="tabTag">EC <i class="tag_down_ico"></i></a>
 	    </div>
 	    <div class="searchTabCon">
 	        <div class="timeWrap">
@@ -268,7 +268,16 @@
 				</div>
 	        </div>		
 			<div class="eclevelLine"></div>
-	        <div class="OnsBtn"><span class="OnsName">ONS</span><span class="OnsYes">Yes<i class="onsRound">&nbsp;</i></span><span class="OnsNo stopHide"><i class="onsRound">&nbsp;</i>No</span></div>
+	        <div class="OnsBtn">
+                <span class="OnsName">ONS</span>
+	            <!-- .slideThree -->
+                <div class="slideCheckbox">  
+                  <input type="checkbox" value="" id="slideOns" name="check" checked />
+                  <div class="slideBg"></div>
+                  <label for="slideOns"></label>
+                </div>
+                <!-- end .slideThree -->
+	        </div>
 			<h2 class="selectConTitle">
 	            IRCT
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
@@ -290,7 +299,7 @@
 	        </div>
 	    </div>
 	    <div class="seachBtnWrap">
-	        <a href="Qstop_SearchResult.html" data-transition="slide" class="form_btn form_btn_blue">Search</a>
+	        <a href="Qstop_SearchResult.html" data-transition="none" class="form_btn form_btn_blue">Search</a>
 	    </div>
 	</div>
 
@@ -299,18 +308,5 @@
 <!-- Javascript with AMD 
 ================================================== -->
 <script src="js/require.js" data-main="js/main" ></script>
-<script src="../js/jquery/jquery-2.1.1.min.js"></script>
-<script type="text/javascript">
-	$(function() {
-		$(".OnsYes").click(function(){
-			$(this).css('display','none');
-			$(".OnsNo").css('display','inline-block');
-		});
-		$(".OnsNo").click(function(){
-			$(this).css('display','none');
-			$(".OnsYes").css('display','inline-block');
-		});
-	});
-</script>
 </body>
 </html>
