--- a/User_Center.html
+++ b/User_Center.html
@@ -28,18 +28,18 @@
 <div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_color_03 js-chart">
 	<header class="headerWrap">
 		<h2 class="lenovoTitle">Personal center</h2>
-		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="index.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->		
 	<div role="main" class="ui-content noFooter">
 		<div class="PcenterMain">
 			<div class="userTopbg">
-				<span class="userBg01"><span class="userBg02"><span class="userBg03"><i class="myico-user userIcon"></i><img src="../images/temp/20141015001445616.jpg" alt="" /></span></span></span>
+				<span class="userBg01"><span class="userBg02"><span class="userBg03"><i class="myico-user userIcon"></i><img src="images/temp/20141015001445616.jpg" alt="" /></span></span></span>
 			</div>
 			<div class="userFromLay">
 				<div class="userLinkWarp">
-					<a href="User_Information.html" class="btn_href" data-transition="slide" ><i class="myico-user"></i>Basic Information</a>
-					<a href="User_Password.html" class="btn_href" data-transition="slide" ><i class="myico-lock"></i>Change Password</a>
+					<a href="User_Information.html" class="btn_href" data-transition="none" ><i class="myico-user"></i>Basic Information</a>
+					<a href="User_Password.html" class="btn_href" data-transition="none" ><i class="myico-lock"></i>Change Password</a>
 					<a href="javascript:void(0)" class="btn_href"><i class="myico-email"></i>Email</a>
 					<a href="javascript:void(0)" class="btn_href"><i class="myico-edit"></i>Bulletin board</a>
 				</div>
