--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE >
-<html>
+<html clas="hardware-acceleration">
 <head>
     <meta charset="utf-8">
     <title>LENOVO V2.0</title>
@@ -23,11 +23,13 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="css/style.css">
+	<!-- cordova.js 链接出错请忽略，因为是打包的时候会被自动加上去的 -->
 	<script type="text/javascript" src="cordova.js"></script>
 	<script type="text/javascript">
 
     if(/Android (\d+\.\d+)/.test(navigator.userAgent)){
 		//alert('android');
+		document.getElementsByTagName("HTML")[0].classList.add("android")
     }else if (/iP(ad|hone|od)/.test(navigator.userAgent)){ 
         //alert(navigator.userAgent);
 		document.getElementsByTagName("HTML")[0].classList.add("ios")
@@ -36,10 +38,10 @@
     </script>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_blue js-chart chart_qstop_home"  data-page-name="qstop_home">
+<div data-role="page" data-quicklinks="true" class="bg_blue js-chart"  data-page-name="qstop_home">
     <header class="headerWrap">
-		<h2 class="lenovoTitle chartsTab"><span class="chartsTab_l cur">SNAP SHOT</span><span class="chartsTab_r">CHARTS</span></h2>
-		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
+		<h2 class="lenovoTitle qstop chartsTab"><span class="chartsTab_l cur">SNAP SHOT</span><span class="chartsTab_r">CHARTS</span></h2>
+		<a href="User_Center.html" data-transition="none" class="jqm-navmenu-link ui-btn-left myico-user"></a>
 		<a href="Qstop_SearchResult.html" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
@@ -71,8 +73,8 @@
 
             <div id="mapWrap" style="width:100%;height:65%; clear:both;"></div>
             </div>
-            <div class="chartsCon chartHide" style="height:98%;">
-                <div id="chart_home_bar" style="width:100%;height:100%;"></div>
+            <div class="chartsCon t-box chartHide"  >
+                <div id="chart_home_bar" class="t-box" style="margin-bottom:10px;"></div>
             </div>
        </div>
     </div>
@@ -81,23 +83,23 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="index.html" data-transition="slide" class="navList nav01 cur">
+		    <a href="index.html" data-transition="none" class="navList nav01 cur">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB.html" data-transition="none" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
-		    <a href="Audit.html" data-transition="slide" class="navList nav03">
+		    <a href="Audit.html" data-transition="none" class="navList nav03">
 		        <i class="myico-nav03"></i>
 		        <p>AUDIT</p>
 		    </a>
-		    <a href="FAI.html" data-transition="slide" class="navList nav04">
+		    <a href="FAI.html" data-transition="none" class="navList nav04">
 		        <i class="myico-nav04"></i>
 		        <p>FAI</p>
 		    </a>
-		    <a href="EC.html" data-transition="slide" class="navList nav05">
+		    <a href="EC.html" data-transition="none" class="navList nav05">
 		        <i class="myico-nav05"></i>
 		        <p>EC</p>
 		    </a>
