--- a/Audit_ODM.html
+++ b/Audit_ODM.html
@@ -20,7 +20,10 @@
     
 	<div role="main" class="ui-content">
        <div class="mainWrap ui_audit basefont1">  
-            <div class="ui_auditodm_title">99<span>Score</span> <span class="eai_state up"></span></div>
+            <div class="ui_auditodm_title">
+                <div class="ui_auditodm_titleCon"><div class="auditScore boxSizing">99<span>score</span></div> <span class="eai_state up"></span></div>
+                <div class="auditChartsBg" id="chart_auditOdm_line"></div>
+            </div>
 			<div class="ui_auditodm_chart audit_odm" id="chart_auditOdm_bar"></div>
 			<div class="ui_auditodm_info basefont1">
 				<div class="ui_auditodm_info_tips">OP Quality</div>
@@ -40,7 +43,7 @@
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB_Odm.html" data-transition="none" class="navList nav02">
+		    <a href="FPY_OOB.html" data-transition="none" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
