--- a/Audit_Search.html
+++ b/Audit_Search.html
@@ -54,7 +54,7 @@
 	            ODM
 	            <a href="javascript:void(0)" class="selectedSure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="OdmAll" checked /><label for="OdmAll" class="form_checkbox">All</label>
@@ -84,7 +84,7 @@
 	            AUDITOR
 	            <a href="javascript:void(0)" class="selectedSure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="AuditorAll" /><label for="AuditorAll" class="form_checkbox">All</label>
@@ -154,7 +154,7 @@
 	            CATEGORY
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="CategoryAll" checked /><label for="CategoryAll" class="form_checkbox">All</label>
@@ -182,7 +182,7 @@
 	        </div>
 	    </div>
 	    <div class="seachBtnWrap">
-	        <a href="Audit_SearchResult.html" data-transition="none" class="form_btn form_btn_blue">Search</a>
+	        <a href="Audit_SearchResult.html" data-transition="none" class="form_btn form_btn_search">Search</a>
 	    </div>
 	</div>
 
