--- a/EC_SearchResult.html
+++ b/EC_SearchResult.html
@@ -55,13 +55,13 @@
 			<div class="mRL60">
 				<div class="diamTit"><i class="dTicon1"></i>DT</div>
 				<div class="ECell-td">
-					<div class="diamonds-1 diabg1">
+					<div class="diamonds-1 boxSizing diabg1">
 						<div class="diaNumTit">CUT IN</div>
 						<span>0</span>
 					</div>
 				</div>
 				<div class="ECell-td">
-					<div class="diamonds-1 diabg2">
+					<div class="diamonds-1 boxSizing diabg2">
 						<div class="diaNumTit">RUN IN</div>
 						<span>7</span>
 					</div>
@@ -72,27 +72,27 @@
 			<div class="mRL60">
 				<div class="diamTit"><i class="dTicon2"></i>NB</div>
 				<div class="ECell-td">
-					<div class="diamonds-1 diabg3">
+					<div class="diamonds-1 boxSizing diabg3">
 						<div class="diaNumTit">CUT IN</div>
 						<span>7</span>
 					</div>
 				</div>
 				<div class="ECell-td">
-					<div class="diamonds-1 diabg4">
+					<div class="diamonds-1 boxSizing diabg4">
 						<div class="diaNumTit">RUN IN</div>
 						<span>10</span>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="EcWarp">
+		<div class="EcWarp boxSizing">
 			<div class="EcTable">
 				<a href="#" class="Eclink clearfix">
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">EC NO：</span><span class="EctextR"><em class="tdWhitespace">WKSNBFLEX2、WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL"><em class="tdWhitespace">FLEX 2-14</em></span>
+						<span class="Ectext">EC NO：</span><span class="EctextR"><em class="tdWhitespace">WKSNBFLEX2、WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL boxSizing"><em class="tdWhitespace">FLEX 2-14</em></span>
 					</div>
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON、WISTRON、WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL"><em class="tdWhitespace">Pass、PassPass</em></span>
+						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON、WISTRON、WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL boxSizing"><em class="tdWhitespace">Pass、PassPass</em></span>
 					</div>
 					<div class="EcTab-th clearfix borderBttomline">
 						<span class="EcRowText">EC DESCRIPTION：</span>
@@ -101,10 +101,10 @@
 				</a>
 				<a href="#" class="Eclink clearfix">
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">EC NO：</span><span class="EctextR"><em class="tdWhitespace">WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL"><em class="tdWhitespace">FLEX 2-14</em></span>
+						<span class="Ectext">EC NO：</span><span class="EctextR"><em class="tdWhitespace">WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL boxSizing"><em class="tdWhitespace">FLEX 2-14</em></span>
 					</div>
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL"><em class="tdWhitespace">Pass</em></span>
+						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL boxSizing"><em class="tdWhitespace">Pass</em></span>
 					</div>
 					<div class="EcTab-th clearfix borderBttomline">
 						<span class="EcRowText">EC DESCRIPTION：</span>
@@ -113,10 +113,10 @@
 				</a>
 				<a href="#" class="Eclink clearfix">
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">EC NO：</span><span class="EctextR"><em>WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL"><em class="tdWhitespace">FLEX 2-14</em></span>
+						<span class="Ectext">EC NO：</span><span class="EctextR"><em>WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL boxSizing"><em class="tdWhitespace">FLEX 2-14</em></span>
 					</div>
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON、WISTRON、WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL"><em class="tdWhitespace">Pass</em></span>
+						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON、WISTRON、WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL boxSizing"><em class="tdWhitespace">Pass</em></span>
 					</div>
 					<div class="EcTab-th clearfix borderBttomline">
 						<span class="EcRowText">EC DESCRIPTION：</span>
@@ -125,10 +125,10 @@
 				</a>
 				<a href="#" class="Eclink clearfix">
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">EC NO：</span><span class="EctextR"><em>WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL"><em class="tdWhitespace">FLEX 2-14</em></span>
+						<span class="Ectext">EC NO：</span><span class="EctextR"><em>WKSNBFLEX2</em></span><span class="Ectext">Product：</span><span class="EctextL boxSizing"><em class="tdWhitespace">FLEX 2-14</em></span>
 					</div>
 					<div class="EcTab-th clearfix">
-						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL"><em class="tdWhitespace">Pass</em></span>
+						<span class="Ectext">ODM：</span><span class="EctextR"><em class="tdWhitespace">WISTRON</em></span><span class="Ectext">Result：</span><span class="EctextL boxSizing"><em class="tdWhitespace">Pass</em></span>
 					</div>
 					<div class="EcTab-th clearfix borderBttomline">
 						<span class="EcRowText">EC DESCRIPTION：</span>
