--- a/FAI.html
+++ b/FAI.html
@@ -20,7 +20,7 @@
     
     <div role="main" class="ui-content">
        <div class="mainWrap basefont ui_fai">
-           <div id="ui_fai_pie" class="ui_fai_pie fai_home" style="width:100%;height:140px;"></div>
+           <div id="ui_fai_pie" class="ui_fai_pie boxSizing fai_home" style="width:100%;height:140px;"></div>
            <div id="ui_fai_bar" class="ui_fai_bar" ></div>
            <div id="ui_fai_map" class="ui_fai_map"  style="width:94%;height:160px;"></div>
        </div>
