--- a/FAI_SearchResult-3.html
+++ b/FAI_SearchResult-3.html
@@ -43,27 +43,27 @@
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
-        <div class="DateSearchTable">
+        <div class="DateSearchTable boxSizing">
 			<div class="dateRow">
-				<div class="dateCell-th">Begin</div>
+				<div class="dateCell-th boxSizing">Begin</div>
 				<div class="dateCell-td">2013-10-14</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">End</div>
+				<div class="dateCell-th boxSizing">End</div>
 				<div class="dateCell-td">2014-10-14</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">Product</div>
+				<div class="dateCell-th boxSizing">Product</div>
 				<div class="dateCell-td">All</div>
 			</div>		
 		</div>
 		<div class="searchText"><i class="searR myico-arrow02"></i></div>
 		<div class="FaiTopblck clearfix">
-			<div class="diamonds-1 diabg1">
+			<div class="diamonds-1 boxSizing diabg1">
 				<div class="diaNumTit">PASSED</div>
 				<span>2759</span>
 			</div>
-			<div class="diamonds-1 diabg3">
+			<div class="diamonds-1 boxSizing diabg3">
 				<div class="diaNumTit">FAILED</div>
 				<span>24</span>
 			</div>
