--- a/FPY_OOBSearchResult-4.html
+++ b/FPY_OOBSearchResult-4.html
@@ -32,21 +32,21 @@
 	</header>
 	<!-- /header -->
 	<div role="main" class="ui-content noFooter">
-		<div class="DateSearchTable">
+		<div class="DateSearchTable boxSizing">
 			<div class="dateRow">
-				<div class="dateCell-th">Date</div>
+				<div class="dateCell-th boxSizing">Date</div>
 				<div class="dateCell-td">2013-10-14 &mdash; &mdash; 2014-10-14</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">Type</div>
+				<div class="dateCell-th boxSizing">Type</div>
 				<div class="dateCell-td">Ramp Up</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">ODM</div>
+				<div class="dateCell-th boxSizing">ODM</div>
 				<div class="dateCell-td">All</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">Product</div>
+				<div class="dateCell-th boxSizing">Product</div>
 				<div class="dateCell-td">All</div>
 			</div>			
 		</div>
