--- a/FPY_OOB_Mp.html
+++ b/FPY_OOB_Mp.html
@@ -84,7 +84,6 @@
                         </div>
                         <div class="t-box-wrap t-box">
                             <div class="font-bg">SVT</div>
-<!--                            <div class="LenovoIconBox t-box" id="fpy_ood_line01"></div>-->
                             <div class="LenovoIconBox t-box" id="fpy_ood_line01"></div>
                         </div>
                         <div class="stop_odm">
@@ -272,7 +271,7 @@
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB.html" data-transition="none" class="navList nav02 cur">
+		    <a href="FPY_OOB_Odm.html" data-transition="none" class="navList nav02 cur">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
