--- a/FPY_Search.html
+++ b/FPY_Search.html
@@ -54,7 +54,7 @@
 	            Phase
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="Phase-1" checked /><label for="Phase-1" class="form_checkbox">Ramp up</label>
@@ -74,7 +74,7 @@
 				<span class="ecSubTag">NB</span>
 			</div>
 			<h3 class="ecSubTit">Family</h3>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="FamilyAll" /><label for="FamilyAll" class="form_checkbox">All</label>
@@ -102,7 +102,7 @@
 	        </div>
 			<div class="ecLine"></div>
 			<h3 class="ecSubTit">Series</h3>
-			<div class="selectConList selTab-table">
+			<div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="SeriesAll" checked /><label for="SeriesAll" class="form_checkbox">All</label>
@@ -138,7 +138,7 @@
 	        </div>
 			<div class="ecLine"></div>
 			<h3 class="ecSubTit">Product</h3>
-			<div class="selectConList selTab-table">
+			<div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="ProductAll" /><label for="ProductAll" class="form_checkbox">All</label>
@@ -176,7 +176,7 @@
 	            ODM
 	            <a href="javascript:void(0)" class="selectedSure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="OdmAll" /><label for="OdmAll" class="form_checkbox">All</label>
@@ -228,7 +228,7 @@
 	        </div>
 	    </div>
 	    <div class="seachBtnWrap">
-	        <a href="FPY_OOBSearchResult-1.html" data-transition="none" class="form_btn form_btn_blue">Search</a>
+	        <a href="FPY_OOBSearchResult-1.html" data-transition="none" class="form_btn form_btn_search">Search</a>
 	    </div>
 	</div>
 
