--- a/Qstop_Odm.html
+++ b/Qstop_Odm.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_blue js-chart">
+<div data-role="page" data-quicklinks="true" class="bg_blue js-chart" data-page-name="qstop_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle selectTitle">
         	<select class="form_select form_txt_style" id="" name="">
@@ -37,6 +37,7 @@
     </header>
 	<!-- /header -->
     <div role="main" class="ui-content">
+        <div id="chart_qstop_odm" class="t-box chartQstopOdm"></div>
         <div class="stop_odm">
         	<div class="stopTab">
                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -148,7 +149,7 @@
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB_Odm.html" data-transition="none" class="navList nav02">
+		    <a href="FPY_OOB.html" data-transition="none" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
