--- a/Qstop_Search.html
+++ b/Qstop_Search.html
@@ -60,7 +60,7 @@
 				<span class="ecSubTag">NB</span>
 			</div>
 			<h3 class="ecSubTit">Family</h3>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="FamilyAll" /><label for="FamilyAll" class="form_checkbox">All</label>
@@ -88,7 +88,7 @@
 	        </div>
 			<div class="ecLine"></div>
 			<h3 class="ecSubTit">Series</h3>
-			<div class="selectConList selTab-table">
+			<div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="SeriesAll" checked /><label for="SeriesAll" class="form_checkbox">All</label>
@@ -124,7 +124,7 @@
 	        </div>
 			<div class="ecLine"></div>
 			<h3 class="ecSubTit">Product</h3>
-			<div class="selectConList selTab-table">
+			<div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="ProductAll" /><label for="ProductAll" class="form_checkbox">All</label>
@@ -162,7 +162,7 @@
 	            ODM
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="OdmAll" /><label for="OdmAll" class="form_checkbox">All</label>
@@ -189,7 +189,7 @@
 	            Lssue Category
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="LssueAll" checked /><label for="LssueAll" class="form_checkbox">All</label>
@@ -211,7 +211,7 @@
 	            OS
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="Osll" checked /><label for="OsAll" class="form_checkbox">All</label>
@@ -241,7 +241,7 @@
 	            GEO
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="GeoAll" checked /><label for="GeoAll" class="form_checkbox">All</label>
@@ -282,7 +282,7 @@
 	            IRCT
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="Irct-1" checked /><label for="Irct-1" class="form_checkbox">1 Day</label>
@@ -299,7 +299,7 @@
 	        </div>
 	    </div>
 	    <div class="seachBtnWrap">
-	        <a href="Qstop_SearchResult.html" data-transition="none" class="form_btn form_btn_blue">Search</a>
+	        <a href="Qstop_SearchResult.html" data-transition="none" class="form_btn form_btn_search">Search</a>
 	    </div>
 	</div>
 
