--- a/User_Information.html
+++ b/User_Information.html
@@ -34,7 +34,7 @@
 	<!-- /header -->
 	<div role="main" class="ui-content noFooter">
         <div class="PcenterMain">
-			<div class="userinfo_1">				
+			<div class="userinfo_1 boxSizing">				
 				<div class="photoWarp">
 					<span class="userBg01"><span class="userBg02"><span class="userBg03"><i class="myico-user userIcon"></i><img src="images/temp/20141015001445616.jpg" alt="" /></span></span></span>
 				</div>
