--- a/User_Password.html
+++ b/User_Password.html
@@ -33,7 +33,7 @@
 	<!-- /header -->
 	<div role="main" class="ui-content noFooter">
 		<div class="PcenterMain">
-			<div class="userinfo_2">
+			<div class="userinfo_2 boxSizing">
 				<dl class="infoList">
 					<dt class="infoTit">Original password</dt>
 					<dd>
