--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Mobile Specific Metas
 ================================================== -->
     <!-- !!!注意 minimal-ui 是IOS7.1的新属性，最小化浏览器UI -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
 	<meta name="meta-apple-mobile-web-app-status-bar-style" content="default"/>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
