--- a/FAI_Odm.html
+++ b/FAI_Odm.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_org js-chart  fai_chart chart_fai_odm"  data-page-name="fai_odm">
+<div data-role="page" data-quicklinks="true" class="bg_org js-chart" data-page-name="fai_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI ODM</h2>
 		<a href="User_Center.html" data-transition="none" class="jqm-navmenu-link ui-btn-left myico-user"></a>
@@ -45,8 +45,8 @@
     <div role="main" class="ui-content">
         <div class="Fai_idmCon">
         	<h3 class="Fai_idmTitle">FAI Breakdown</h3>
-            <div id="ui_faiodm_pie" class="ui_fai_pie" style="width:100%;height:155px;"></div>           
-            <h3 class="Fai_idmTitle">One Month Summary</h3>
+            <div id="ui_faiodm_pie" class="ui_fai_pie boxSizing" style="width:100%;height:155px;"></div>           
+<!--            <h3 class="Fai_idmTitle">One Month Summary</h3>-->
             <div id="ui_faiodm_bar" class="ui_fai_bar"></div>
             <div class="stop_odm">
         	<div class="stopTab">
@@ -172,7 +172,7 @@
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB_Odm.html" data-transition="none" class="navList nav02">
+		    <a href="FPY_OOB.html" data-transition="none" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
