--- a/FAI_Search.html
+++ b/FAI_Search.html
@@ -54,7 +54,7 @@
 	            GEO
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="GeoAll" checked /><label for="GeoAll" class="form_checkbox">All</label>
@@ -84,7 +84,7 @@
 	            ODM
 	            <a href="javascript:void(0)" class="selectedSure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="OdmAll" /><label for="OdmAll" class="form_checkbox">All</label>
@@ -144,7 +144,7 @@
 				<span class="ecSubTag">NB</span>
 			</div>
 			<h3 class="ecSubTit">Family</h3>
-	        <div class="selectConList selTab-table">
+	        <div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="FamilyAll" /><label for="FamilyAll" class="form_checkbox">All</label>
@@ -172,7 +172,7 @@
 	        </div>
 			<div class="ecLine"></div>
 			<h3 class="ecSubTit">Series</h3>
-			<div class="selectConList selTab-table">
+			<div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="SeriesAll" checked /><label for="SeriesAll" class="form_checkbox">All</label>
@@ -208,7 +208,7 @@
 	        </div>
 			<div class="ecLine"></div>
 			<h3 class="ecSubTit">Product</h3>
-			<div class="selectConList selTab-table">
+			<div class="selectConList selTab-table boxSizing">
                 <div class="selTab-th">
 					<span class="form_checkbox_wrap">
 					   <input type="checkbox" id="ProductAll" /><label for="ProductAll" class="form_checkbox">All</label>
@@ -246,7 +246,7 @@
 	        <div class="PnInput"><span class="pnTextName">PN</span><span class="pntext"><input type="text" class="form_txt_style"></span></div>
 	    </div>
 	    <div class="seachBtnWrap">
-	        <a href="FAI_SearchResult-1.html" data-transition="none" class="form_btn form_btn_blue">Search</a>
+	        <a href="FAI_SearchResult-1.html" data-transition="none" class="form_btn form_btn_search">Search</a>
 	    </div>
 	</div>
 
