--- a/FAI_SearchResult-2.html
+++ b/FAI_SearchResult-2.html
@@ -43,24 +43,24 @@
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
-        <div class="DateSearchTable">
+        <div class="DateSearchTable boxSizing">
 			<div class="dateRow">
-				<div class="dateCell-th">Begin</div>
+				<div class="dateCell-th boxSizing">Begin</div>
 				<div class="dateCell-td">2013-10-14</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">End</div>
+				<div class="dateCell-th boxSizing">End</div>
 				<div class="dateCell-td">2014-10-14</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">GEO</div>
+				<div class="dateCell-th boxSizing">GEO</div>
 				<div class="dateCell-td">EMEA AG PRC EAP MAP</div>
 			</div>		
 		</div>
 		<div class="searchText"><i class="searR myico-arrow02"></i></div>
 		<div class="Fai_idmCon">
         	<h3 class="Fai_idmTitle">FAI Breakdown</h3>
-            <div id="ui_faiodm_pie" class="ui_fai_pie fai_search"></div>           
+            <div id="ui_faiodm_pie" class="ui_fai_pie boxSizing fai_search"></div>           
             <h3 class="Fai_idmTitle">One Month Summary</h3>
             <div id="ui_faiodm_bar" class="ui_fai_bar"></div>
         </div>
