--- a/Qstop_SearchResult.html
+++ b/Qstop_SearchResult.html
@@ -32,37 +32,37 @@
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
-        <div class="DateSearchTable">
+        <div class="DateSearchTable boxSizing">
 			<div class="dateRow">
-				<div class="dateCell-th">Begin</div>
+				<div class="dateCell-th boxSizing">Begin</div>
 				<div class="dateCell-td">2013-10-14</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">End</div>
+				<div class="dateCell-th boxSizing">End</div>
 				<div class="dateCell-td">2013-10-14</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">ODM</div>
+				<div class="dateCell-th boxSizing">ODM</div>
 				<div class="dateCell-td">All</div>
 			</div>
 			<div class="dateRow">
-				<div class="dateCell-th">Issue Type</div>
+				<div class="dateCell-th boxSizing">Issue Type</div>
 				<div class="dateCell-td">Alert Q-stop Case Record</div>
 			</div>
             <div class="dateRow">
-				<div class="dateCell-th">Issue Category</div>
+				<div class="dateCell-th boxSizing">Issue Category</div>
 				<div class="dateCell-td">Design MFG Supplier  Engineering</div>
 			</div>
             <div class="dateRow">
-				<div class="dateCell-th">OS</div>
+				<div class="dateCell-th boxSizing">OS</div>
 				<div class="dateCell-td">Windows Android DOS  Linux Google</div>
 			</div>
             <div class="dateRow">
-				<div class="dateCell-th">GEO</div>
+				<div class="dateCell-th boxSizing">GEO</div>
 				<div class="dateCell-td">EMEA AG PRC EAP MAP</div>
 			</div>
             <div class="dateRow">
-				<div class="dateCell-th">Product</div>
+				<div class="dateCell-th boxSizing">Product</div>
 				<div class="dateCell-td">All</div>
 			</div>	
 		</div>
